# anchor-counter

./: .gitignore  Anchor.toml  package-lock.json
.program_client/: Cargo.toml
.program_client/src/: lib.rs
programs/anchor-counter/: Cargo.toml
programs/anchor-counter/src/: lib.rs
tests/: anchor-counter.ts
trdelnik-tests/: Cargo.toml
trdelnik-tests/fuzz-tests/: fuzz_test_1.rs
trdelnik-tests/tests/: test.rs
