[package]
name = "trdelnik-tests"
version = "0.1.0"
description = "Created with Trdelnik"
edition = "2021"

[dev-dependencies]
fehler = "1.0.0"
rstest = "0.12.0"
trdelnik-client = { path = "../../trdelnik/crates/client", version = "0.6.0" }

[dependencies.program_client]
path = "../.program_client"

[dependencies.anchor-counter]
path = "../programs/anchor-counter"
